// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWithSteppers should display message when provided 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--error quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-icons__wrapper"
      >
        <div
          class="quill-input-no-label__wrapper"
        >
          <input
            class="input peer input__align--left input__size--md"
            id="quill-input-5"
            placeholder="0.00"
            type="text"
            value=""
          />
        </div>
        <span
          class="icon_wrapper"
        >
          <button
            class="quill-button quill-icon-button__size--md quill__color--tertiary-black-white"
            data-loading="false"
            data-state=""
          >
            <svg
              height="22"
              role="img"
              viewBox="0 0 13 22"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M12.188 10.75a.45.45 0 0 1-.438.438H1.25a.43.43 0 0 1-.437-.438.45.45 0 0 1 .437-.437h10.5a.47.47 0 0 1 .438.437"
                />
              </g>
              <defs>
                <clippath
                  id="46175ff1191fd10246347ec900b78198__a"
                >
                  <path
                    d="M0 0h13v22H0z"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
          <button
            class="quill-button quill-icon-button__size--md quill__color--tertiary-black-white"
            data-loading="false"
            data-state=""
          >
            <svg
              height="22"
              role="img"
              viewBox="0 0 13 22"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M6.938 5.5v4.813h4.812a.47.47 0 0 1 .438.437.45.45 0 0 1-.438.438H6.938V16a.45.45 0 0 1-.438.438.43.43 0 0 1-.437-.438v-4.812H1.25a.43.43 0 0 1-.437-.438.45.45 0 0 1 .437-.437h4.813V5.5a.45.45 0 0 1 .437-.437.47.47 0 0 1 .438.437"
                />
              </g>
              <defs>
                <clippath
                  id="f2fd7ad989320e76085b65d123e0f61e__a"
                >
                  <path
                    d="M0 0h13v22H0z"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </span>
      </div>
    </div>
    <div
      class="message__container message__container--md message__container__status--error"
    >
      <span
        class="message__container__text"
      >
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`TextFieldWithSteppers should display unitLeft when provided 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-icons__wrapper"
      >
        <div
          class="quill-input-no-label__wrapper"
        >
          <span
            class="quill-typography quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--disabled quill-input-label__label quill-input-label__label--left"
          >
            $
          </span>
          <input
            class="input peer input__align--left input__size--md"
            id="quill-input-6"
            placeholder="0.00"
            type="text"
            value=""
          />
        </div>
        <span
          class="icon_wrapper"
        >
          <button
            class="quill-button quill-icon-button__size--md quill__color--tertiary-black-white"
            data-loading="false"
            data-state=""
          >
            <svg
              height="22"
              role="img"
              viewBox="0 0 13 22"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M12.188 10.75a.45.45 0 0 1-.438.438H1.25a.43.43 0 0 1-.437-.438.45.45 0 0 1 .437-.437h10.5a.47.47 0 0 1 .438.437"
                />
              </g>
              <defs>
                <clippath
                  id="46175ff1191fd10246347ec900b78198__a"
                >
                  <path
                    d="M0 0h13v22H0z"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
          <button
            class="quill-button quill-icon-button__size--md quill__color--tertiary-black-white"
            data-loading="false"
            data-state=""
          >
            <svg
              height="22"
              role="img"
              viewBox="0 0 13 22"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M6.938 5.5v4.813h4.812a.47.47 0 0 1 .438.437.45.45 0 0 1-.438.438H6.938V16a.45.45 0 0 1-.438.438.43.43 0 0 1-.437-.438v-4.812H1.25a.43.43 0 0 1-.437-.438.45.45 0 0 1 .437-.437h4.813V5.5a.45.45 0 0 1 .437-.437.47.47 0 0 1 .438.437"
                />
              </g>
              <defs>
                <clippath
                  id="f2fd7ad989320e76085b65d123e0f61e__a"
                >
                  <path
                    d="M0 0h13v22H0z"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextFieldWithSteppers should display unitRight when provided 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-icons__wrapper"
      >
        <div
          class="quill-input-no-label__wrapper"
        >
          <input
            class="input peer input__align--left input__size--md"
            id="quill-input-7"
            placeholder="0.00"
            type="text"
            value=""
          />
          <span
            class="quill-typography quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default quill-input-label__label quill-input-label__label--right"
          >
            USD
          </span>
        </div>
        <span
          class="icon_wrapper"
        >
          <button
            class="quill-button quill-icon-button__size--md quill__color--tertiary-black-white"
            data-loading="false"
            data-state=""
          >
            <svg
              height="22"
              role="img"
              viewBox="0 0 13 22"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M12.188 10.75a.45.45 0 0 1-.438.438H1.25a.43.43 0 0 1-.437-.438.45.45 0 0 1 .437-.437h10.5a.47.47 0 0 1 .438.437"
                />
              </g>
              <defs>
                <clippath
                  id="46175ff1191fd10246347ec900b78198__a"
                >
                  <path
                    d="M0 0h13v22H0z"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
          <button
            class="quill-button quill-icon-button__size--md quill__color--tertiary-black-white"
            data-loading="false"
            data-state=""
          >
            <svg
              height="22"
              role="img"
              viewBox="0 0 13 22"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M6.938 5.5v4.813h4.812a.47.47 0 0 1 .438.437.45.45 0 0 1-.438.438H6.938V16a.45.45 0 0 1-.438.438.43.43 0 0 1-.437-.438v-4.812H1.25a.43.43 0 0 1-.437-.438.45.45 0 0 1 .437-.437h4.813V5.5a.45.45 0 0 1 .437-.437.47.47 0 0 1 .438.437"
                />
              </g>
              <defs>
                <clippath
                  id="f2fd7ad989320e76085b65d123e0f61e__a"
                >
                  <path
                    d="M0 0h13v22H0z"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextFieldWithSteppers should handle the hover for outline variant 1`] = `
<div
  class="quill-input-no-label__wrapper"
>
  <input
    class="input peer input__align--left input__size--md"
    id="quill-input-4"
    placeholder="Placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`TextFieldWithSteppers should match snapshot 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-icons__wrapper"
      >
        <div
          class="quill-input-no-label__wrapper"
        >
          <input
            class="input peer input__align--left input__size--md"
            id="quill-input-1"
            placeholder="Enter text"
            type="text"
            value=""
          />
        </div>
        <span
          class="icon_wrapper"
        >
          <button
            class="quill-button quill-icon-button__size--md quill__color--tertiary-black-white"
            data-loading="false"
            data-state=""
          >
            <svg
              height="22"
              role="img"
              viewBox="0 0 13 22"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M12.188 10.75a.45.45 0 0 1-.438.438H1.25a.43.43 0 0 1-.437-.438.45.45 0 0 1 .437-.437h10.5a.47.47 0 0 1 .438.437"
                />
              </g>
              <defs>
                <clippath
                  id="46175ff1191fd10246347ec900b78198__a"
                >
                  <path
                    d="M0 0h13v22H0z"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
          <button
            class="quill-button quill-icon-button__size--md quill__color--tertiary-black-white"
            data-loading="false"
            data-state=""
          >
            <svg
              height="22"
              role="img"
              viewBox="0 0 13 22"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M6.938 5.5v4.813h4.812a.47.47 0 0 1 .438.437.45.45 0 0 1-.438.438H6.938V16a.45.45 0 0 1-.438.438.43.43 0 0 1-.437-.438v-4.812H1.25a.43.43 0 0 1-.437-.438.45.45 0 0 1 .437-.437h4.813V5.5a.45.45 0 0 1 .437-.437.47.47 0 0 1 .438.437"
                />
              </g>
              <defs>
                <clippath
                  id="f2fd7ad989320e76085b65d123e0f61e__a"
                >
                  <path
                    d="M0 0h13v22H0z"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;
